--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,8 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -29,6 +31,8 @@
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-mainColor: #8EE6C9;
@@ -200,15 +204,6 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
-  }
-  .mt-14 {
-    margin-top: calc(var(--spacing) * 14);
-  }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
   .mt-\[30px\] {
     margin-top: 30px;
   }
@@ -225,17 +220,8 @@
   .h-\[127px\] {
     height: 127px;
   }
-  .h-\[496px\] {
-    height: 496px;
-  }
   .min-h-\[500vh\] {
     min-height: 500vh;
-  }
-  .w-\[40\%\] {
-    width: 40%;
-  }
-  .w-\[60\%\] {
-    width: 60%;
   }
   .w-full {
     width: 100%;
@@ -243,27 +229,29 @@
   .max-w-\[432px\] {
     max-width: 432px;
   }
-  .max-w-\[487px\] {
-    max-width: 487px;
-  }
   .max-w-\[509px\] {
     max-width: 509px;
+  }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
+  .shrink {
+    flex-shrink: 1;
   }
   .border-collapse {
     border-collapse: collapse;
   }
-  .-translate-y-\[8\%\] {
-    --tw-translate-y: calc(8% * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
+  .scale-75 {
+    --tw-scale-x: 75%;
+    --tw-scale-y: 75%;
+    --tw-scale-z: 75%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .resize {
     resize: both;
-  }
-  .flex-col {
-    flex-direction: column;
   }
   .place-content-center {
     place-content: center;
@@ -286,14 +274,8 @@
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
   }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
-  .gap-2\.5 {
-    gap: calc(var(--spacing) * 2.5);
-  }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
@@ -311,14 +293,6 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-4 {
-    border-style: var(--tw-border-style);
-    border-width: 4px;
   }
   .border-transparent {
     border-color: transparent;
@@ -338,8 +312,8 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-\[33px\] {
-    padding-inline: 33px;
+  .px-7 {
+    padding-inline: calc(var(--spacing) * 7);
   }
   .py-\[11px\] {
     padding-block: 11px;
@@ -347,8 +321,11 @@
   .py-\[14px\] {
     padding-block: 14px;
   }
-  .indent-6 {
-    text-indent: calc(var(--spacing) * 6);
+  .indent-2 {
+    text-indent: calc(var(--spacing) * 2);
+  }
+  .indent-2\.5 {
+    text-indent: calc(var(--spacing) * 2.5);
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -365,16 +342,6 @@
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
-  }
-  .text-\[21px\] {
-    font-size: 21px;
-  }
-  .text-\[54px\] {
-    font-size: 54px;
-  }
-  .leading-\[25px\] {
-    --tw-leading: 25px;
-    line-height: 25px;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -403,10 +370,6 @@
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-2xs {
-    --tw-shadow: 0 1px var(--tw-shadow-color, rgb(0 0 0 / 0.05));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -414,20 +377,19 @@
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
   .duration-100 {
     --tw-duration: 100ms;
     transition-duration: 100ms;
   }
-  .placeholder\:text-lg {
+  .placeholder\:text-xs {
     &::placeholder {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
-  .placeholder\:leading-\[25px\] {
-    &::placeholder {
-      --tw-leading: 25px;
-      line-height: 25px;
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
   .hover\:border-btnColor {
@@ -458,12 +420,6 @@
       }
     }
   }
-  .focus\:border {
-    &:focus {
-      border-style: var(--tw-border-style);
-      border-width: 1px;
-    }
-  }
   .active\:border-btnColor {
     &:active {
       border-color: var(--color-btnColor);
@@ -474,14 +430,14 @@
       color: var(--color-btnColor);
     }
   }
-  .max-lg\:flex-col {
-    @media (width < 64rem) {
-      flex-direction: column;
-    }
-  }
   .max-lg\:flex-col-reverse {
     @media (width < 64rem) {
       flex-direction: column-reverse;
+    }
+  }
+  .max-md\:mt-12 {
+    @media (width < 48rem) {
+      margin-top: calc(var(--spacing) * 12);
     }
   }
   .max-md\:hidden {
@@ -489,9 +445,24 @@
       display: none;
     }
   }
+  .sm\:gap-8 {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
   .sm\:px-\[29px\] {
     @media (width >= 40rem) {
       padding-inline: 29px;
+    }
+  }
+  .sm\:px-\[33px\] {
+    @media (width >= 40rem) {
+      padding-inline: 33px;
+    }
+  }
+  .sm\:indent-6 {
+    @media (width >= 40rem) {
+      text-indent: calc(var(--spacing) * 6);
     }
   }
   .sm\:text-4xl {
@@ -511,16 +482,18 @@
       font-size: 20px;
     }
   }
+  .md\:scale-100 {
+    @media (width >= 48rem) {
+      --tw-scale-x: 100%;
+      --tw-scale-y: 100%;
+      --tw-scale-z: 100%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
   .md\:text-5xl {
     @media (width >= 48rem) {
       font-size: var(--text-5xl);
       line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
-  .md\:text-lg {
-    @media (width >= 48rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .md\:text-\[21px\] {
@@ -531,11 +504,6 @@
   .lg\:mt-16 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 16);
-    }
-  }
-  .lg\:flex {
-    @media (width >= 64rem) {
-      display: flex;
     }
   }
   .lg\:w-\[40\%\] {
@@ -559,19 +527,17 @@
       translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
-  .lg\:flex-row {
-    @media (width >= 64rem) {
-      flex-direction: row;
-    }
-  }
-  .lg\:text-\[21px\] {
-    @media (width >= 64rem) {
-      font-size: 21px;
-    }
-  }
   .lg\:text-\[54px\] {
     @media (width >= 64rem) {
       font-size: 54px;
+    }
+  }
+  .placeholder\:lg\:text-lg {
+    &::placeholder {
+      @media (width >= 64rem) {
+        font-size: var(--text-lg);
+        line-height: var(--tw-leading, var(--text-lg--line-height));
+      }
     }
   }
 }
@@ -599,20 +565,34 @@ button,input {
   outline: none;
   border: none;
 }
-@property --tw-translate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  transition: .3s ease;
 }
-@property --tw-translate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
+header.shrink {
+  box-shadow: 0 5px 5px #0001;
 }
-@property --tw-translate-z {
+header.shrink .navbar {
+  height: 90px;
+}
+@property --tw-scale-x {
   syntax: "*";
   inherits: false;
-  initial-value: 0;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -638,10 +618,6 @@ button,input {
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-leading {
-  syntax: "*";
-  inherits: false;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -774,19 +750,33 @@ button,input {
   syntax: "*";
   inherits: false;
 }
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-translate-x: 0;
-      --tw-translate-y: 0;
-      --tw-translate-z: 0;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
       --tw-rotate-x: initial;
       --tw-rotate-y: initial;
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
       --tw-border-style: solid;
-      --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
@@ -817,6 +807,9 @@ button,input {
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-duration: initial;
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
     }
   }
 }
