--- a/src/main.css
+++ b/src/main.css
@@ -30,6 +30,13 @@
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
+}.contentContainer{
+    max-width: 1256px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 button,input{
     cursor: pointer;
